works, scrapes, renders and has a sass powered stylesheet

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,16 @@
-<html>
+{% load media %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <title>Eurofunnel</title>
+        <meta name="description" content="A big, tapering pipe of videogame news, reviews, videos and screenshots." />
+        <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+        {% include_media "eurofunnel.css" %}
+    </head>
     <body>
+        <h1>Eurofunnel</h1>
+        <p>A big, tapering pipe of videogame news, reviews, videos and screenshots.</p>
         {% block "content" %}
         {% endblock "content" %}
     </body>
