--- a/static/styles/eurofunnel.sass
+++ b/static/styles/eurofunnel.sass
@@ -53,6 +53,7 @@ body
     top: -6px
     background-color: white
     box-shadow: 0px 0px 12px rgba( 0, 0, 0, 0.2 )
+    padding-bottom: 100px
 
 h1, h2
     font-family: $font
