--- a/static/styles/eurofunnel.sass
+++ b/static/styles/eurofunnel.sass
@@ -29,7 +29,7 @@ $orange_shadow : rgb( 84, 71, 68 )
 $yellow_shadow : rgb( 84, 84, 68 )
 $green_shadow : rgb( 73, 84, 68 )
 
-$font : "DejaVu Sans", sans-serif
+$font : "DejaVu Sans", "Verdana", sans-serif
 
 body
     font-family: $font
@@ -123,16 +123,14 @@ a
                     margin-bottom: 1em
             cite
                 position: absolute
-                left: -160px
-                top: -31px
+                left: -170px
+                top: 0px
                 width: 140px
-                line-height: 14px 
+                line-height: 20px 
                 strong, span
                 strong
                 span.date
                     font-size: 10px
-					display: block
-					margin-top: 1em
                 a
                     font-weight: bold
                     &:link
