--- a/templates/base.html
+++ b/templates/base.html
@@ -6,16 +6,16 @@
         <title>Eurofunnel</title>
         <meta name="description" content="A big, tapering pipe of videogame news, reviews, videos and screenshots." />
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
         {% include_media "channelfunnel.css" %}
         {% include_media "channelfunnel.js" %}
     </head>
     <body>
         <div id="maincol">
-            <h1>Eurofunnel</h1>
-            <p class="strap">A big, tapering pipe of videogame news, reviews, videos and screenshots.</p>
-            <form method="GET" action="{% url search %}">
-                <input title="Search terms" name="term" id="term" type="text" value="{{ term|default:"keywords" }}" class="ui-widget empty" />
-                <button type="submit">Search</button>
+            <h1>The Eurogamer Network Content Funnel</h1>
+            <form method="GET" id="search" action="{% url search %}">
+                <input title="Search terms" name="term" id="term" type="text" value="{{ term }}" placeholder="Search" class="ui-widget empty" />
+                <button type="submit" title="Search"><img src="{% media_url 'img/search.png' %}" width="16" height="16" alt="Search"/></button>
                 <script>
                     var cache = new Array();
                     $("#term").autocomplete( {
