--- a/templates/plain.html
+++ b/templates/plain.html
@@ -1,4 +1,3 @@
-{% load media %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -9,7 +8,7 @@
     </head>
     <body>
         <div id="maincol">
-            <h1>Similarity tests</h1>
+            <h1>WHAT THE HELL IS HAPPENING?!</h1>
             {% block "content" %}
             {% endblock "content" %}
         </div>
